- https://github.com/eclipse-sirius/sirius-web/issues/3360[#3360] Handle documents upload with other formats than JSON and XMI.
- https://github.com/eclipse-sirius/sirius-web/issues/3376[#3376] [diagram] Prevent `getToolSection` to be called during multi-selection


== v2024.3.0

=== Shapes

- Transform Sirius Web into an extensible platform
- Facilitate the insertion of elements into a list node
- Add support to filter elements on a diagram
- Add filters on the explorer view
- Add support for overflow label strategies
- Improves resizing support for list nodes

=== Architectural decision records

- [ADR-126] Add the ability to reuse both the Sirius Web frontend and backend easily
- [ADR-127] Add the ability to extend the Sirius Web frontend
- [ADR-128] Add the ability to extend the Sirius Web backend
- [ADR-129] Add support for confirmation dialogs
- [ADR-130] Add support for outside and inside node labels
- [ADR-131] Add more filtering capabilities on diagram
- [ADR-132] Add support for filters in Explorer View
- [ADR-133] Add Tree Widget to the View DSL
- [ADR-134] Split IObjectService in multiples sub services
- [ADR-135] Add support for representations in object related services
- [ADR-136] Add variables to the view form dsl
- [ADR-137] Use a common identification strategy for transient representations
- [ADR-138] Allow consumers to reuse smaller parts of the Sirius Web backend


=== Deprecation warning

- The type `RenameProjectSuccessPayload` and `DeletedProjectSuccessPayload` will be replaced by `SuccessPayload`
- The type `DeleteRepresentationSuccessPayload` will be replaced by `SuccessPayload`
- The mutation `createRepresentation` and `deleteRepresentation` and their datafetcher will be entirely managed by Sirius Components
- The interface `IEditingContextEPackageService` should be deleted since we now have access to editing context preprocessors which can be used to contribute packages to editing context and even more.